# V-OOS-combination-of-redefinition-

./: .gitignore  CMakeLists.txt  README.md
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  vos_jni_bridge.cpp
android/app/src/main/java/com/vos/app/: LockdownService.kt  MainActivity.kt  NativeEngine.kt
include/vos/: log.h  types.h
src/apps/: camera.cpp  camera.h  dialer.cpp  dialer.h  sms.cpp  sms.h
src/core/: crypto.cpp  crypto.h  dns_guard.cpp  dns_guard.h  event_logger.cpp  event_logger.h  kernel.cpp  kernel.h  lockdown.cpp  lockdown.h  mesh_net.cpp  mesh_net.h  notifications.cpp  notifications.h  privacy.cpp  privacy.h  settings.cpp  settings.h  vfs.cpp  vfs.h  vfs_persist.cpp  vfs_persist.h
src/platform/android/: platform_android.cpp
src/platform/linux/: platform_linux.cpp
src/platform/win32/: platform_win32.cpp
src/shell/: main.cpp
tests/: test_lockdown.cpp  test_mesh_net.cpp  test_privacy.cpp  test_vfs.cpp
